--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 # command to install dependencies
 install:
-  - pip install flake8 .
+  - pip install flake8
   - pip install --user -r requirements.txt
 # command to run tests
 before_script:
