--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 # command to install dependencies
 install:
   - pip install flake8
-  - pip install --user -r requirements.txt
+  - pip install -r requirements.txt
 # command to run tests
 before_script:
   - "flake8 --show-source --builtins=_ Teradata"
